# ros2_seminars_ws

./: LICENSE  docker_install.bash  dockerfile
seminar_3/: CMakeLists.txt  Readme.md  package.xml  run _gpu.sh  run.sh
seminar_3/install/: local_setup.sh  setup.sh
seminar_3/install/Seminar_3/share/Seminar_3/: package.bash  package.zsh
seminar_3/install/seminar_3/lib/seminar_3/: task1_circle  task1_spiral  turtle_cmd_pub
seminar_3/install/seminar_3/share/seminar_3/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
seminar_3/install/seminar_3/share/seminar_3/launch/: task_3.launch.py
seminar_3/launch/: task_1.launch.py  turtle3.launch.py
seminar_3/log/: latest_build
seminar_3/src/task_1/: circle.cpp  ln_spiral.cpp  sin.cpp  turtle_circle.cpp  turtle_circle.h  turtle_pub.cpp  turtle_pub.h  turtle_spiral.cpp  turtle_spiral.h
seminar_4/: README.md
seminar_4/scripts/: docker_install.zsh
seminar_4/simulation/docker/: Dockerfile  into.bash  run.bash  run.zsh  stop.bash
seminar_4/simulation/workspace/src/star/: package.xml  setup.cfg  setup.py
seminar_4/simulation/workspace/src/star/launch/: launch_all.launch.py
seminar_4/simulation/workspace/src/star/src/: navigation.py  qr_decoder.py
seminar_4/simulation/workspace/src/survey/launch/: ozyland.launch.py
seminar_5/: CMakeLists.txt  Readme.md  package.xml  task2.drawio
seminar_5/launch/: camera_line_following.launch.py  lidar_maze_solving.launch.py
seminar_5/src/: line_follower.cpp  line_follower.h  maze_solving_with_lidar.cpp
seminar_5/worlds/: line_following.world
seminar_6/: .gitignore  CMakeLists.txt  package.xml
seminar_6/config/: rqt_params.yaml
seminar_6/launch/: task_1.launch.py  task_2.launch.py
seminar_6/src/: goal_executer.cpp  goal_seeker.cpp  goal_seeker.h  line_follower.cpp  line_follower.h  line_following_with_camera.cpp
seminar_6/worlds/: line_following.world
